--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -4,7 +4,7 @@ name: deep-sky
 description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/silverblue-main
+base-image: ghcr.io/ublue-os/kinoite-main
 image-version: 40 # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
@@ -15,17 +15,83 @@ modules:
       - source: system
         destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
 
+  # enable RPM Fusion
+  - type: rpm-ostree
+    install:
+      - https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-%OS_VERSION%.noarch.rpm
+      - https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-%OS_VERSION%.noarch.rpm
+
+  # nvidia
+  - type: rpm-ostree
+    install:
+      - akmod-nvidia
+      - libva-utils
+      - nvidia-vaapi-driver
+      - nvtop
+      - vdpauinfo
+      - vulkan
+      - xorg-x11-drv-nvidia-cuda
+      - xorg-x11-drv-nvidia-cuda-libs
+    replace:
+      - akmod-open
+
+  # Multimedia
+  - type: rpm-ostree
+    install:
+      - intel-media-driver
+      - libva-nvidia-driver
+    replace:
+      - ffmpeg
+
   - type: rpm-ostree
     repos:
-      # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
+      - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
       # - micro
-      # - starship
+      - starship
+
+      # Virtualization
+      - guestfs-tools
+      - libvirt
+      - libvirt-daemon-config-network
+      - libvirt-daemon-kvm
+      - python3-libguestfs
+      - qemu
+      - qemu-kvm
+      - virt-install
+      - virt-manager
+      - virt-top
+      - virt-viewer
+
+      # Container Management
+      - buildah
+      - flatpak
+      - flatpak-builder
+      - podman
+      - podman-compose
+      - skopeo
+      - toolbox
+
+      - bootc
+      - distrobox
+      - fuse-encfs
+      - hplip
+      - htop
+      - ifuse
+      - inotify-tools
+      - just
+      - mesa-libGLU
+      - steam-devices
+      - stubby
+      - tlp
+      - variety
+      - wl-clipboard
+      - ydotool
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
-      # - firefox
-      # - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
+      - firefox
+      - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
@@ -41,6 +107,34 @@ modules:
       # Flatpak runtimes are not supported (like org.winehq.Wine//stable-23.08),
       # only normal flatpak applications are (like Floorp Lightning web browser in this example).
       # Installing different branches of the same Flatpak is not supported.
+        - com.bitwarden.desktop
+        - com.borgbase.Vorta
+        - com.brave.Browser
+        - com.discordapp.Discord
+        - com.github.tchx84.Flatseal
+        - com.google.Chrome
+        - com.logseq.Logseq
+        - com.valvesoftware.Steam
+        - com.vivaldi.Vivaldi
+        - io.freetubeapp.FreeTube
+        - io.github.flattool.Warehouse
+        - io.github.unknownskl.greenlight
+        - org.fedoraproject.MediaWriter
+        - org.gimp.GIMP
+        - org.godotengine.Godot
+        - org.inkscape.Inkscape
+        - org.kde.filelight
+        - org.kde.gwenview
+        - org.kde.kcalc
+        - org.kde.kcolorchooser
+        - org.kde.kdenlive
+        - org.kde.krita
+        - org.kde.okular
+        - org.libreoffice.LibreOffice
+        - org.mozilla.firefox
+        - org.qbittorrent.qBittorrent
+        - org.videolan.VLC
+        - sh.cider.Cider
       remove:
       # - org.gnome.eog
 
